CSSの指定などのパスを修正

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
         })(document);
 
         $(function(){
-        $("#menu").load("common/menu.html");
+        $("#menu").load("../common/menu.html");
         });
       </script>
 
