--- a/activities/index.html
+++ b/activities/index.html
@@ -17,13 +17,13 @@
         })(document);
 
         $(function(){
-        $("#menu").load("common/menu.html");
+        $("#menu").load("../common/menu.html");
         });
       </script>
 
     <meta name="viewport" content="width-devide-width, initial-scale=1, shrink-to-fot=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/custom.css">
 
 </head>
 <body>
