--- a/common/menu.html
+++ b/common/menu.html
@@ -14,9 +14,10 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/">ホーム</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/about">当部について</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/activities">活動内容</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/topics">近況報告</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/library">資料館</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/join">入部案内</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/contact">お問い合わせ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/contact">連絡先</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/links">リンク</a></li>
             </ul>
         </div>
@@ -27,21 +28,21 @@
     home
         -お知らせ
         -このサイトについて
-    about
+    about (当部について)
         -ここがすごい！
         -主なイベント
         -基本情報
     topics (近況報告)
         -最新年度の内容
         -アーカイブ
-    works
+    library (資料館)
         -部誌
         -フォトコン
-    join
+    join (入部案内)
         -入部案内
         -新歓情報
-    contact
+    contact (連絡先)
         -連絡先
-    links
+    links (リンク)
         -リンク集
 -->
