ナビゲーションバーの"資料館"にドロップダウンメニューを実装

--- a/common/menu.html
+++ b/common/menu.html
@@ -15,7 +15,16 @@
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/">ホーム</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/about">当部について</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/topics">近況報告</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/library">資料館</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" 
+                    id="libraryDropdown" role="button" data-toggle="dropdown" 
+                    aria-haspopup="true" aria-expanded="false">資料館</a>
+                    <div class="dropdown-menu" aria-labelledby="libraryDropdown">
+                        <a class="dropdown-item" href="#">資料館トップ</a>
+                        <a class="dropdown-item" href="#">部誌「シールドビーム」</a>
+                        <a class="dropdown-item" href="#">フォトコン</a>
+                    </div>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/join">入部案内</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/contact">連絡先</a></li>
                 <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/links">リンク</a></li>
