Edit: トップページのデザインを全体的に変更左揃えのテキストを中央揃えに。ページ上部にお知らせを追加。コンテンツを再編したものに合わせた。

--- a/index.html
+++ b/index.html
@@ -56,50 +56,82 @@
     -->
 
 
-    <div class="container text-center mb-4">
-        <h5 class="font-weight-normal text-secondary">東京電機大学 東京千住キャンパス <br class="d-inline d-md-none">学術研究部会</h5>
-        <h1 class="display-4"><strong>鉄道研究部</strong><small>へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
-        <p>（ 工　事　中　Alpha ver.）</p>
-        <a href="https://twitter.com/tdufe/" target="_blank" class="btn twitterbtn"><i class="fab fa-twitter fa-lg"></i> Twitter はこちら</a>
+    <div class="container-fluid text-center mb-4">
+        <div class="jumbotron-fluid">
+            <h5 class="font-weight-normal text-secondary">東京電機大学 東京千住キャンパス <br class="d-inline d-md-none">学術研究部会</h5>
+            <h1 class="display-4"><strong>鉄道研究部</strong><small>へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
+            <p>（ 工　事　中　Beta ver.）</p>
+            <a href="https://twitter.com/tdufe/" target="_blank" class="btn twitterbtn mb-4"><i class="fab fa-twitter fa-lg"></i> Twitter はこちら</a>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="alert alert-success">
+                        <p><strong>2020/05/03</strong> <span class="badge badge-success">Update!</span><br>
+                            Webサイト全面リニューアル！順次更新してまいります。</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="alert alert-danger">
+                        <p><strong>新入生の方へ</strong><br>
+                            COVID-19 の影響により、現在学内への立ち入りが禁止されています。最新の情報については、大学公式サイトや鉄道研究部公式Twitterをご確認ください。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <hr>
 
-    <div id="top-about" class="container my-5">
+    <div id="top-about" class="container text-md-center my-5">
         <div class="row">
             <div class="col-12">
-                <h2>About</h2>
-                <p>こんにちは！鉄道研究部です！</p>
-                <p>学園祭での展示や長期休暇中の合宿をはじめ，鉄道に関するさまざまな活動を行っています。<br>
-                    また，空いた時間には各部員が部室に集まって思い思いの作業をしています。</p>
-                <a class="btn btn-primary" href="about/">サークルについて</a>
-                <a class="btn btn-primary" href="activities/">活動について</a>
+                <p class="h5">こんにちは！</p>
+                <p class="font-weight-normal">私たちは、鉄道に関するさまざまな活動を日々行っています。<br>
+                    このホームページでは、私たちの活動や制作物、イベント情報などについて紹介していきます。<br>
+                    どうぞゆっくりしていってね!!!</p>
             </div>
         </div>
-    </div>
-
-    <div class="container my-5">
         <div class="row">
-            <div class="col-12">
-                <h2 class="">Join Us</h2>
-                <p>学科や学年に問わず随時部員募集中です。大学院生も在籍しています。</p>
+            <div class="col-md-12 my-5">
+                <h2>About</h2>
+                <p><strong>鉄道に関する活動…といっても、実際どんなことやってるの？</strong><br>
+                    そんな疑問にお答えします。</p>
+                <p>また、当部の基本情報についてもこちらからご確認ください。</p>
+                <a class="btn btn-primary" href="about/">当部について</a>
+            </div>
+
+            <div class="col-md-12 my-5">
+                <h2>Topics</h2>
+                <p><strong>近況報告・最新情報のページです。</strong></p>
+                <a class="btn btn-primary" href="topics/">詳しくはこちら</a>
+            </div>
+
+            <div class="col-12 my-5">
+                <h2>Join Us</h2>
+                <p><strong>学科や学年問わず随時部員募集中です。</strong><br>
+                    大学院生も在籍しています。</p>
                 <p>鉄道が好きな皆さんの入部をお待ちしています！</p>
                 <a class="btn btn-primary" href="join/">詳しくはこちら</a>
             </div>
-        </div>
-    </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mb-4">
+            <div class="col-12 my-5">
+                <h2>TDUFe Library</h2>
+                <p><strong>資料館のページです。</strong></p>
+                <p>毎年発行している部誌「シールドビーム」や、学園祭でのフォトコンテスト作品などを紹介しています。</p>
+                <a class="btn btn-primary" href="library/">詳しくはこちら</a>
+            </div>
+
+            <div class="col-md-6 my-5">
                 <h2>Contact</h2>
-                <p>当サークルへのお問い合わせ先はこちら。</p>
+                <p>当部への連絡先はこちら。</p>
                 <a class="btn btn-primary d-none d-sm-inline" href="contact/">クリック！</a>
                 <a class="btn btn-primary d-inline d-sm-none" href="contact/">タッチ！</a>
             </div>
-            <div class="col-md-6 mb-4">
+
+            <div class="col-md-6 my-5">
                 <h2>Links</h2>
-                <p>リンク集です。</p>
+                <p>リンク集です。学内から学外まで。</p>
                 <a class="btn btn-primary d-none d-sm-inline" href="links/">クリック！</a>
                 <a class="btn btn-primary d-inline d-sm-none" href="links/">タッチ！</a>
             </div>
@@ -107,6 +139,7 @@
     </div>
 
     <div class="container">
+        <hr>
         <a href="https://www.dendai.ac.jp/" class="btn btn-link">東京電機大学ホームページ</a><br>
         <a href="http://www.sg.dendai.ac.jp/s1g-honbu/" class="btn btn-link">学術研究部会ターミナルサイト</a>
     </div>
