--- a/index.html
+++ b/index.html
@@ -56,26 +56,24 @@
     -->
 
 
-    <div class="container-fluid text-center mb-4">
-        <div class="jumbotron-fluid">
-            <h5 class="font-weight-normal text-secondary">東京電機大学 東京千住キャンパス <br class="d-inline d-md-none">学術研究部会</h5>
-            <h1 class="display-4"><strong>鉄道研究部</strong><small>へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
-            <p>（ 工　事　中　Beta ver.）</p>
-            <a href="https://twitter.com/tdufe/" target="_blank" class="btn twitterbtn mb-4"><i class="fab fa-twitter fa-lg"></i> Twitter はこちら</a>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="alert alert-success">
-                        <p><strong>2020/05/03</strong> <span class="badge badge-success">Update!</span><br>
-                            Webサイト全面リニューアル！順次更新してまいります。</p>
-                    </div>
+    <div class="jumbotron-fluid jumbotron-top text-center text-light mb-4 padding-top-80px">
+        <h5 class="font-weight-normal shadow0">東京電機大学 東京千住キャンパス</h5>
+        <h1 class="display-4 shadow0"><strong>鉄道研究部</strong><small>へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
+        <p class="shadow0">（Beta ver.）</p>
+        <a href="https://twitter.com/tdufe/" target="_blank" class="btn twitterbtn mb-4"><i class="fab fa-twitter fa-lg"></i> Twitter はこちら</a>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="alert alert-success">
+                    <p><strong>2020/05/03</strong> <span class="badge badge-success">Update!</span><br>
+                        Webサイト全面リニューアル！工事中のページは順次更新していきます。</p>
                 </div>
-                <div class="col-lg-6">
-                    <div class="alert alert-danger">
-                        <p><strong>新入生の方へ</strong><br>
-                            COVID-19 の影響により、現在学内への立ち入りが禁止されています。最新の情報については、大学公式サイトや鉄道研究部公式Twitterをご確認ください。</p>
-                    </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="alert alert-danger">
+                    <p><strong>新入生の方へ</strong><br>
+                        COVID-19 の影響により、現在学内への立ち入りが禁止されています。最新の情報については、大学公式サイトや鉄道研究部公式Twitterをご確認ください。</p>
                 </div>
             </div>
         </div>
