Edit: CSSのbody paddingを復活
- paddingが必要ないページは、個別に設定する。

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css">
 
+    <style>
+        body {
+            padding-top: 0px;
+        }
+    </style>
+
 </head>
 <body>
 
@@ -57,8 +63,8 @@
 
 
     <div class="jumbotron-fluid jumbotron-top text-center text-light mb-4 padding-top-80px">
-        <h5 class="font-weight-normal shadow0">東京電機大学 東京千住キャンパス</h5>
-        <h1 class="display-4 shadow0"><strong>鉄道研究部</strong><small>へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
+        <h5 class="shadow0">東京電機大学 東京千住キャンパス</h5>
+        <h1 class="display-4 shadow0 font-weight-bold">鉄道研究部<small class="font-weight-bold">へ<br class="d-inline d-lg-none">ようこそ！</small></h1>
         <p class="shadow0">（Beta ver.）</p>
         <a href="https://twitter.com/tdufe/" target="_blank" class="btn twitterbtn mb-4"><i class="fab fa-twitter fa-lg"></i> Twitter はこちら</a>
     </div>
