Fix: CSSやJSのパスを修正
- JSの参照パスが誤っていたので修正。

--- a/404.html
+++ b/404.html
@@ -22,9 +22,9 @@
       </script>
 
     <meta name="viewport" content="width-devide-width, initial-scale=1, shrink-to-fot=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/s1g-tekken/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="/s1g-tekken/css/custom.css">
     <style>
         body{
             background: #343a40;
@@ -54,6 +54,6 @@
 
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="/s1g-tekken/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
