--- a/contact/index.html
+++ b/contact/index.html
@@ -46,6 +46,6 @@
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
