--- a/topics/index.html
+++ b/topics/index.html
@@ -47,6 +47,6 @@
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
