Add: "このサイトについて"を追加
- about_site.htmlを作成
- トップページ下のリンクをabout_site.htmlと旧ホームページへのリンクに変更

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
     <div class="container">
         <hr>
-        <a href="https://www.dendai.ac.jp/" class="btn btn-link">東京電機大学ホームページ</a><br>
-        <a href="http://www.sg.dendai.ac.jp/s1g-honbu/" class="btn btn-link">学術研究部会ターミナルサイト</a>
+        <a href="about_site.html" class="btn btn-link">このサイトについて（準備中）</a><br>
+        <a href="/oldsite/" class="btn btn-link">鉄道研究部 旧ホームページ</a>
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
