Fix: ナビゲーションバー関連のリンクを修正
- menu.htmlのリンクを正常に動作するよう修正
- トップページからナビゲーションバーへのリンクを修正

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         })(document);
 
         $(function(){
-        $("#menu").load("common/menu.html");
+        $("#menu").load("/s1g-tekken/common/menu.html");
         });
       </script>
 
