--- a/common/menu.html
+++ b/common/menu.html
@@ -12,9 +12,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/">ホーム</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/about">当部について</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/topics">近況報告</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/">ホーム</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/about">当部について</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/topics">近況報告</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" 
                     id="libraryDropdown" role="button" data-toggle="dropdown" 
@@ -25,9 +25,9 @@
                         <a class="dropdown-item" href="#">フォトコン</a>
                     </div>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/join">入部案内</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/contact">連絡先</a></li>
-                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/newhptest/links">リンク</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/join">入部案内</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/contact">連絡先</a></li>
+                <li class="nav-item"><a class="nav-link" href="/s1g-tekken/links">リンク</a></li>
             </ul>
         </div>
     </nav>
