Fix: リンクを修正

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container">
         <hr>
         <a href="about_site.html" class="btn btn-link">このサイトについて（準備中）</a><br>
-        <a href="/oldsite/" class="btn btn-link">鉄道研究部 旧ホームページ</a>
+        <a href="oldsite/" class="btn btn-link">鉄道研究部 旧ホームページ</a>
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
