Fix: リンクを修正

--- a/links/index.html
+++ b/links/index.html
@@ -44,17 +44,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 py-2">
-                <h4>学術研究部会 <span class="font-weight-normal">関連</span></h4>
+                <h4>学術研究部会 <small class="font-weight-normal">関連</small></h4>
                 <ul class="py-2 bg-light">
                     <li>
-                        <a href="http://www.sg.dendai.ac.jp/s1g-energy/contents/top.html"><img class="border" src="../images/banners/eneken2.gif" alt="エネルギー研究部"></a>
+                        <a href="http://www.sg.dendai.ac.jp/s1g-energy/"><img class="border" src="../images/banners/eneken2.gif" alt="エネルギー研究部"></a>
                         <br>
                         エネ研さん。部室がお隣です。
                     </li>
                 </ul>
                 <ul class="py-2 bg-light">
                     <li>
-                        <a href=""><img class="border" src="../images/banners/zidouseigyo001.png" alt="自動制御研究部公式"></a>
+                        <a href="http://www.sg.dendai.ac.jp/s1g-tsr/"><img class="border" src="../images/banners/zidouseigyo001.png" alt="自動制御研究部公式"></a>
                         <br>
                         自制さんのホームページです。
                     </li>
@@ -68,7 +68,7 @@
                 </ul>
             </div>
             <div class="col-md-6 py-2">
-                <h4>東京電機大学 <span class="font-weight-normal">関連</span></h4>
+                <h4>東京電機大学 <small>関連</small></h4>
                 <ul class="py-2 bg-light">
                     <li>
                         <a href="https://dendai.ac.jp/" class="btn btn-outline-primary font-weight-bold">東京電機大学</a>
