--- a/links/index.html
+++ b/links/index.html
@@ -90,15 +90,10 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-5 jumbotron">
-        <div class="container">
-            <h4>この先まだ工事中です。</h4>
-            <h4 class="text-muted">This page is still under construction.</h4>
-            <h1 class="display-3 my-4">m(_ _)m</h1>
-            <p class=" text-muted">ｺﾞﾒﾝﾅｻｲ</p>
-            
-            <a class="btn btn-primary mt-4" href="../index.html"><i class="fas fa-angle-double-left faa-passing-reverse animated"></i> Back to Top Page</a>
-        </div>
+    <hr>
+
+    <div class="container">
+        <p>当サイトのバナーは現在準備中です。</p>
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
