Edit: 連絡先のページを更新
- titleを修正
- お問い合わせ→連絡先 に変更
- 住所を追加

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang ="ja">
 <head>
     <meta charset="utf-8">
-    <title>TDUFe - 活動紹介</title>
+    <title>TDUFe - 連絡先</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -32,17 +32,22 @@
 
     <div class="container">
         <h1 class="display-4">Contact</h1>
-        <h3 class="font-weight-normal text-secondary">お問い合わせ</h3>
+        <h3 class="font-weight-normal text-secondary">連絡先</h3>
         <hr>
     </div>
 
-    <div class="container pt-4">
+    <div class="container my-4">
         <ul>
             <li class="mb-3">Twitter：<br><a class="font-weight-bold" href="https://twitter.com/tdufe/">@tdufe</a>
                 <div class="text-muted">DMなどでご連絡ください。</div></li>
             <li class="mb-3">メール：<br><strong class="text-monospace">tdufe(at)hotmail.com</strong>
                 <div class="text-muted">(at)の部分をアットマークに置き換えてください。</div></li>
         </ul>
+    </div>
+
+    <div class="container my-4">
+        <h5>住所（郵便物等）</h5>
+        <p>〒120-8551 東京都足立区千住旭町５ 学術研究部会 鉄道研究部</p>
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
