細かい修正
- topicsのタイトル文字変更
- トップページのインデントずれ修正

--- a/topics/index.html
+++ b/topics/index.html
@@ -31,7 +31,7 @@
     <div id="menu" class="fixed-top"></div>
 
     <div class="container">
-        <h1 class="display-4">topics</h1>
+        <h1 class="display-4">Topics</h1>
         <h3 class="font-weight-normal text-secondary">近況報告・最新情報</h3>
     </div>
 
