--- a/about/index.html
+++ b/about/index.html
@@ -30,19 +30,32 @@
 
     <div id="menu" class="fixed-top"></div>
 
+    <!-- タイトル部分 -->
     <div class="container">
         <h1 class="display-4">About</h1>
-        <h3 class="font-weight-normal text-secondary">当部について</h3>
+        <h4 class="font-weight-normal text-secondary">当部について</h4>
         <hr>
     </div>
 
+    <!-- ここから本文 -->
+    <div class="container">
+      <h3 class="my-4">東京電機大学 東京千住キャンパス 学術研究部会 鉄道研究部</h3>
+
+      <h4>活動場所</h4>
+      <p>
+        東京千住キャンパス ３号館４階<br>
+        (東京都足立区千住旭町５)
+      </p>
+      <h4></h4>
+    </div>
 
 
-    <div class="container-fluid mt-5 jumbotron">
+    <div class="jumbotron jumbotron-fluid mt-5">
         <div class="container">
-            <h4>このページは工事中です。</h4>
-            <h4 class="text-muted">Under construction.</h4>
-            <h1 class="display-3 my-4">m(_ _)m</h1>
+            <h4>この先、工事中！</h4>
+            <h4 class="text-muted">Under construction!</h4>
+            <p class="mt-4">コンテンツは準備中です。ごめんなさい。</p>
+            <h1 class="display-4 my-4">m(_ _)m</h1>
             
             <a class="btn btn-primary mt-4" href="index.html"><i class="fas fa-angle-double-left faa-passing-reverse animated"></i> Back</a>
         </div>
