トップページを更新

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
             <div class="col-lg-6">
                 <div class="alert alert-success">
                     <p><strong>2020/07/13</strong> <span class="badge badge-success">Update!</span><br>
-                        Webサイト全面リニューアル！工事中のページは順次更新していきます。</p>
+                        当サイトのバナーを追加しました！　その他細かい修正を行いました。</p>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="alert alert-danger">
                     <p><strong>新入生の方へ</strong><br>
-                        COVID-19 の影響により、現在学内への立ち入りが禁止されています。最新の情報については、大学公式サイトや鉄道研究部公式Twitterをご確認ください。</p>
+                        COVID-19 への対応に関する最新情報については、<a href="https://www.dendai.ac.jp">大学公式HP <i class="fas fa-external-link-alt"></i> </a>や鉄道研究部公式Twitterをご確認ください。</p>
                 </div>
             </div>
         </div>
