--- a/links/index.html
+++ b/links/index.html
@@ -35,7 +35,10 @@
     <div class="container">
         <h1 class="display-4">Links</h1>
         <h3 class="font-weight-normal text-secondary">リンク集</h3>
-        <p class="mt-4">リンクがご迷惑でしたら､お手数ですが<a href="contact.html">こちら</a>よりご一報ください。</p>
+        <p class="mt-4">
+            リンクがご迷惑でしたら、お手数ですが<a href="../contact/">こちら</a>よりご一報ください。<br>
+            当サイトのバナーは、ページ下部にございます。
+        </p>
         <hr>
     </div>
 
@@ -86,14 +89,23 @@
                         当サイトで使用させていただいたBootstrapテーマです。
                     </li>
                 </ul>
+                <ul class="py-2 bg-light">
+                    <li>
+                        <a href="https://fonts.google.com" class="btn btn-outline-primary font-weight-bold">Google Fonts</a>
+                        <br>
+                        Webフォントを使用しています。
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
 
-    <hr>
-
-    <div class="container">
-        <p>当サイトのバナーは現在準備中です。</p>
+    <div class="container my-5">
+        <hr>
+        <h4>TDUFe</h4>
+        <p>リンク用のバナーとしてお使いください。</p>
+        <img src="../images/tdufe-banners/tdufe-banner1-resized.png">
+        <img src="../images/tdufe-banners/tdufe-banner2-resized.png">
     </div>
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
